fix so that layout flow wont break on hex input selection

--- a/app/style/CreateWalletForm.less
+++ b/app/style/CreateWalletForm.less
@@ -85,7 +85,6 @@
 }
 
 .create-wallet-label {
-  margin-right: 20px;
   float: left;
   color: #e7eaed;
   font-size: 19px;
