--- a/app/style/TextToggle.less
+++ b/app/style/TextToggle.less
@@ -14,6 +14,14 @@
   text-align: left;
 }
 
+.text-toggle-small {
+  margin: 0px;
+  > div {
+    min-width: 0px;
+    padding: 0px 16px;
+  }
+}
+
 .text-toggle::after {
   .clearfloat-mixin;
 }
